--- a/app/src/main/res/layout/activity_demo1.xml
+++ b/app/src/main/res/layout/activity_demo1.xml
@@ -7,7 +7,7 @@
     >
 
     <ImageView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="300dp"
         android:scaleType="centerCrop"
         android:src="@drawable/img_duola"
