--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -8,96 +8,131 @@
     android:background="@color/color_f7f7f8"
     >
 
-    <LinearLayout
-        android:id="@+id/ll_click1"
+    <ScrollView
         android:layout_width="match_parent"
-        android:orientation="horizontal"
-        android:layout_marginTop="1dp"
-        android:background="@color/color_white"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:padding="10dp"
-            android:text="1.沉浸式-背景为图片"
-            />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    </LinearLayout>
+            <LinearLayout
+                android:id="@+id/ll_click1"
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:layout_marginTop="1dp"
+                android:background="@color/color_white"
+                android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:layout_marginTop="1dp"
-        android:id="@+id/ll_click2"
-        android:layout_width="match_parent"
-        android:orientation="horizontal"
-        android:background="@color/color_white"
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:text="1.沉浸式-背景为图片"
+                    />
 
-        android:layout_height="wrap_content">
+            </LinearLayout>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:padding="10dp"
-            android:text="2.沉浸式-背景为颜色值-全透明"
-            />
+            <LinearLayout
+                android:layout_marginTop="1dp"
+                android:id="@+id/ll_click2"
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:background="@color/color_white"
 
-    </LinearLayout>
+                android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:layout_marginTop="1dp"
-        android:id="@+id/ll_click3"
-        android:layout_width="match_parent"
-        android:orientation="horizontal"
-        android:background="@color/color_white"
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:text="2.沉浸式-背景为颜色值-全透明"
+                    />
 
-        android:layout_height="wrap_content">
+            </LinearLayout>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:padding="10dp"
-            android:text="3.沉浸式-背景为颜色值-半透明"
-            />
+            <LinearLayout
+                android:layout_marginTop="1dp"
+                android:id="@+id/ll_click3"
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:background="@color/color_white"
 
-    </LinearLayout>
+                android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:layout_marginTop="1dp"
-        android:id="@+id/ll_click4"
-        android:layout_width="match_parent"
-        android:orientation="horizontal"
-        android:background="@color/color_white"
-        android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:text="3.沉浸式-背景为颜色值-半透明"
+                    />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:padding="10dp"
-            android:text="4.沉浸式-多Fragment模式"
-            />
+            </LinearLayout>
 
-    </LinearLayout>
+            <LinearLayout
+                android:layout_marginTop="1dp"
+                android:id="@+id/ll_click4"
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:background="@color/color_white"
+                android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:layout_marginTop="1dp"
-        android:id="@+id/ll_click5"
-        android:layout_width="match_parent"
-        android:orientation="horizontal"
-        android:background="@color/color_white"
-        android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:text="4.沉浸式-多Fragment模式"
+                    />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:padding="10dp"
-            android:text="5.加载数据模式"
-            />
+            </LinearLayout>
 
-    </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_marginTop="1dp"
+                android:id="@+id/ll_click5"
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:background="@color/color_white"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:text="5.加载数据模式"
+                    />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_marginTop="1dp"
+                android:id="@+id/ll_click6"
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:background="@color/color_white"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:text="6.Tablayout+Viewpager模式"
+                    />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </ScrollView>
+
+
 
 </LinearLayout>
